# wazuh-cli

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  SECURITY.md  deny.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml  scorecard.yml
docker/: docker-compose.yml
scripts/: check_project_structure.sh
specs/: 00-overview.md  01-authentication.md  02-cli-design.md  03-api-endpoints.md  04-error-handling.md  05-configuration.md  06-project-structure.md  07-testing.md  08-spec-conformance.md  09-coverage.md
src/: config.rs  error.rs  lib.rs  main.rs  output.rs
src/api/: active_response.rs  agent.rs  api_info.rs  cluster.rs  decoder.rs  event.rs  group.rs  list.rs  logtest.rs  manager.rs  mitre.rs  mod.rs  overview.rs  rootcheck.rs  rule.rs  sca.rs  security.rs  syscheck.rs  syscollector.rs  task.rs
src/cli/: agent.rs  cluster.rs  credentials.rs  decoder.rs  group.rs  manager.rs  mitre.rs  mod.rs  other.rs  rootcheck.rs  rule.rs  sca.rs  security.rs  syscheck.rs  syscollector.rs
src/client/: auth.rs  mod.rs  tls.rs
src/commands/: credentials.rs  mod.rs
src/config/: credential_store.rs  file.rs  mod.rs
tests/: cli_conformance.rs
tests/integration/: mod.rs
