[package]
name = "wazuh-cli"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "A CLI tool for the Wazuh REST API"
repository = "https://github.com/hiboma/wazuh-cli"
readme = "README.md"

[dependencies]
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
rustls-pemfile = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

[[test]]
name = "integration"
path = "tests/integration/mod.rs"
