[package]
name = "wazuh-cli"
version = "0.3.0"
edition = "2024"
license = "MIT"
description = "A CLI tool for the Wazuh REST API"
repository = "https://github.com/hiboma/wazuh-cli"
readme = "README.md"

[dependencies]
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
rustls-pemfile = "2"
rpassword = "7"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
zeroize = { version = "1", features = ["zeroize_derive"] }

[target.'cfg(target_os = "macos")'.dependencies]
keyring = { version = "3", default-features = false, features = ["apple-native"] }
# Same major as the version that `keyring`'s apple-native backend pulls
# in for macOS, so that downcasting the boxed error inside
# keyring::Error::PlatformFailure resolves to the same `Error` type.
security-framework = "3"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"
opt-level = "z"

[[test]]
name = "integration"
path = "tests/integration/mod.rs"
